--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.vscode
 .DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/django
